# ProtocolGary

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/media/: demo.cast
examples/: demo_run.py
gary/: __init__.py  failure_modes.py  protocol.py  verdict.py
tests/: test_gary.py
