[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protocol-gary"
version = "0.1.0"
description = "Independent audit protocol for AI agents — plan verification before and after execution"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "agent", "safety", "audit", "verification", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["gary"]

[project.urls]
Homepage = "https://github.com/droogdoc/protocol-gary"
Issues = "https://github.com/droogdoc/protocol-gary/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
